tests/ui/duplicate-fmt.stderr
error: only one #[display(...)] attribute is allowed
 --> tests/ui/duplicate-fmt.rs:5:1
  |
5 | #[display("...")]
  | ^^^^^^^^^^^^^^^
