tests/ui/duplicate-fmt.rs
use thiserror::EnumDisplay;

#[derive(EnumDisplay, Debug)]
#[display("...")]
#[display("...")]
pub struct Error;

fn main() {}
